# wrappity

./: LICENSE  README.md  pyproject.toml
docs/: guide.md  ideas.md  why.md
examples/: example1.py
src/wrappity/: __init__.py  base.py
tests/: tests.py
