[project]
name = "wrappity"
version = "0.1.0"
description = "A package for easier access to deeply nested dictionaries."
readme = "README.md"
authors = [
    { name = "Tomas Rollo", email = "tomas.rollo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
wrappity = "wrappity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
