[project]
name = "wrappity"
version = "0.1.3"
description = "A package for easier access to deeply nested dictionaries."
readme = "README.md"
authors = [
    { name = "Tomas Rollo", email = "tomas.rollo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tomasrollo/wrappity"
Issues = "https://github.com/tomasrollo/wrappity/issues"

[project.scripts]
wrappity = "wrappity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
